--- a/styles/style.css
+++ b/styles/style.css
@@ -134,9 +134,6 @@
 }
 
 /* gamer section styles */
-main {
-  margin-bottom: 200px;
-}
 .gamer {
   background: linear-gradient(
     90deg,
@@ -208,13 +205,13 @@ main {
 
 /* category section styles */
 .category {
+  margin-top: 50px;
   padding: 50px 100px;
   background: linear-gradient(
     90deg,
     rgba(255, 66, 165, 0.03) 0%,
     rgba(255, 66, 165, 0.03) 100%
   );
-  margin: 0 auto;
 }
 .category-container {
   display: grid;
@@ -226,15 +223,14 @@ main {
   gap: 10px;
   align-items: center;
   text-align: left;
-  justify-content: center;
   padding: 10px;
-  border-radius: 50px;
-  background: #fff;
-  border: 1px solid #fff;
-  cursor: pointer;
   color: #0b0223;
   font-size: 14px;
   font-weight: 600;
+  cursor: pointer;
+  border: 1px solid #fff;
+  border-radius: 50px;
+  background: #fff;
 }
 .category-items:hover {
   color: #ff42a5;
@@ -246,6 +242,71 @@ main {
   height: 40px;
 }
 
+/* footer section styles */
+footer {
+  background: #0b0223;
+  padding: 50px 100px;
+}
+.footer-logo {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.footer-title {
+  color: #fff;
+  font-size: 45px;
+  font-weight: 700;
+}
+.footer-title span {
+  background: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
+  color: transparent;
+  -webkit-background-clip: text;
+}
+.footer-items-1,
+.footer-items-2 {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.item-break {
+  display: flex;
+  gap: 20px;
+}
+.footer-items-1 li {
+  list-style-type: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+}
+.social-icons {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.social-icons img {
+  width: 30px;
+  padding: 0 10px;
+  cursor: pointer;
+}
+.footer-items-2 li {
+  color: rgba(255, 255, 255, 0.6);
+  list-style-type: none;
+  font-size: 16px;
+  font-weight: 500;
+}
+.copyright {
+  text-align: center;
+}
+.copyright small {
+  color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+}
 /* game section styles */
 .game {
   padding: 50px 100px;
@@ -380,6 +441,15 @@ main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
+  }
+
+  footer {
+    background: #0b0223;
+    padding: 50px;
+  }
+  .item-break {
+    flex-direction: column;
+    gap: 40px;
   }
 }
 
