--- a/styles/style.css
+++ b/styles/style.css
@@ -208,6 +208,42 @@
 .card-item p {
   margin-top: 10px;
 }
+.img-item {
+  position: relative;
+}
+.child {
+  position: absolute;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.6) 0%,
+    rgba(0, 0, 0, 0.6) 100%
+  );
+  border: 2px solid #f948b2;
+  width: 242px;
+  height: 285px;
+  border-radius: 16px;
+  top: 0;
+  left: 0;
+  display: none;
+}
+.child i {
+  position: absolute;
+  top: 100px;
+  left: 110px;
+  font-size: 30px;
+  color: #f948b2;
+}
+.child p {
+  position: absolute;
+  top: 130px;
+  left: 30%;
+  font-size: 20px;
+  color: #f948b2;
+}
+.img-item:hover .child {
+  display: block;
+  transition: 1s;
+}
 .card-item img {
   width: 100%;
 }
@@ -425,6 +461,18 @@ footer {
   .card {
     grid-template-columns: 1fr;
   }
+  .child {
+    width: 325px;
+    height: 380px;
+  }
+  .child i {
+    top: 150px;
+    left: 150px;
+  }
+  .child p {
+    top: 180px;
+    left: 35%;
+  }
 
   .game {
     padding: 50px;
@@ -515,6 +563,18 @@ footer {
   }
   .card {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .child {
+    width: 320px;
+    height: 375px;
+  }
+  .child i {
+    top: 150px;
+    left: 150px;
+  }
+  .child p {
+    top: 180px;
+    left: 35%;
   }
 
   .game {
