--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:wght@400;500;600;700;800&display=swap");
 
 /* common and share section styles */
+body {
+  max-width: 1440px;
+  margin: 0 auto;
+}
 * {
   font-family: "Work Sans", sans-serif;
   margin: 0;
@@ -31,6 +35,9 @@
   color: #534c64;
   font-size: 18px;
   font-weight: 400;
+}
+.color-span {
+  color: #0b0223;
 }
 
 /* navbar section styles*/
@@ -93,13 +100,31 @@
 
 /* banner section styles */
 .banner {
-  padding: 0 100px;
+  padding-right: 100px;
 }
 .banner-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  gap: 20px;
+}
+.banner-left-img {
+  width: calc(50% - 20px);
+  position: relative;
+}
+.banner-right-img {
+  width: calc(50% - 20px);
+}
+.banner-left-img img,
+.banner-right-img img {
+  width: 100%;
+  height: 75vh;
+  display: block;
+}
+.banner-content {
+  width: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .banner-sub-title {
   color: #0b0223;
@@ -134,13 +159,6 @@
   background: #4ec5f7;
   margin-left: 15px;
 }
-.banner-img {
-  width: 50%;
-}
-.banner-img img {
-  display: block;
-  width: 100%;
-}
 
 /* gamer section styles */
 .gamer {
@@ -156,9 +174,13 @@
   gap: 20px;
   align-items: center;
 }
-.gamer-content {
+.gamer-content,
+.gamer-img {
   text-align: right;
   width: 50%;
+}
+.gamer-img img {
+  width: 100%;
 }
 .gamer-content h1 {
   margin-bottom: 20px;
@@ -176,12 +198,6 @@
   font-size: 24px;
   font-weight: 700;
 }
-.gamer-img {
-  width: 50%;
-}
-.gamer-img img {
-  width: 100%;
-}
 
 /* online game section styles */
 .online-game {
@@ -189,29 +205,24 @@
 }
 .online-game-content {
   text-align: center;
+  margin-bottom: 30px;
 }
 .online-game-content h1 {
-  margin-bottom: 10px;
+  margin: 10px 0;
 }
 .card {
-  margin-top: 50px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 30px;
+  gap: 20px;
 }
-.card p {
-  color: #534c64;
-  font-size: 14px;
-  font-weight: 500;
-  margin-top: 10px;
+.card-item img {
+  width: 100%;
 }
-.card-item p {
-  margin-top: 10px;
-}
-.img-item {
+.card-parent {
   position: relative;
+  cursor: pointer;
 }
-.child {
+.card-child {
   position: absolute;
   background: linear-gradient(
     0deg,
@@ -219,38 +230,125 @@
     rgba(0, 0, 0, 0.6) 100%
   );
   border: 2px solid #f948b2;
-  width: 242px;
-  height: 285px;
+  width: 100%;
+  height: 98%;
   border-radius: 16px;
   top: 0;
   left: 0;
   display: none;
 }
-.child i {
+.hover-play {
   position: absolute;
-  top: 100px;
-  left: 110px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-size: 30px;
-  color: #f948b2;
+  color: #ffffff;
 }
-.child p {
+.hover-text {
   position: absolute;
-  top: 130px;
-  left: 30%;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-size: 20px;
-  color: #f948b2;
+  font-weight: 600;
+  color: #ff42a5;
 }
-.img-item:hover .child {
+.card-parent:hover .card-child {
   display: block;
-  transition: 1s;
 }
-.card-item img {
+.card-caption {
+  text-align: center;
+  color: #534c64;
+  font-size: 12px;
+  font-weight: 500;
+  margin-top: 10px;
+}
+
+/* game section styles */
+.game {
+  padding: 50px 100px;
+}
+.game-container {
+  display: flex;
+  gap: 100px;
+  align-items: center;
+}
+.game-content {
+  width: 50%;
+}
+.game-text {
+  text-align: right;
+}
+.game-text p {
+  margin: 20px 0 0 100px;
+}
+.game-parent-img {
+  width: 50%;
+  position: relative;
+}
+.game-parent-img img {
   width: 100%;
+}
+.game-child-img {
+  position: absolute;
+  bottom: -10%;
+  left: -15%;
+}
+.game-child-img img {
+  width: 50%;
+}
+
+/* career section styles */
+.career {
+  margin-top: 50px;
+  background: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
+  padding-left: 100px;
+}
+.career-container {
+  display: flex;
+  align-items: center;
+}
+.career-content,
+.career-img {
+  width: 50%;
+}
+.career-img img {
+  width: 100%;
+}
+.career-title {
+  color: #fff;
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.career-description {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+.career-list {
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+}
+.designation {
+  list-style-type: none;
+}
+.country {
+  text-align: right;
+  list-style-type: none;
+}
+.designation li,
+.country li {
+  padding-bottom: 10px;
 }
 
 /* category section styles */
 .category {
-  margin-top: 50px;
   padding: 50px 100px;
   background: linear-gradient(
     90deg,
@@ -259,8 +357,8 @@
   );
 }
 .category-container {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
 }
@@ -278,54 +376,18 @@
   border-radius: 50px;
   background: #fff;
 }
+.category-items img {
+  width: 40px;
+  height: 40px;
+}
 .category-items:hover {
   color: #ff42a5;
   transition: 1s;
   border: 1px solid #ff42a5;
 }
-.category-items img {
-  width: 40px;
-  height: 40px;
-}
-
-/* game section styles */
-.game {
-  padding: 50px 100px;
-}
-.game-container {
-  display: flex;
-  gap: 20px;
-  align-items: center;
-}
-.game-content {
-  width: 50%;
-}
-.game-text {
-  width: 70%;
-  margin: 0 auto;
-  text-align: right;
-}
-.game-img {
-  width: 50%;
-  position: relative;
-}
-.game-img img {
-  width: 100%;
-}
-.game-child-img {
-  position: absolute;
-  bottom: -50px;
-  left: -50px;
-}
-.game-child-img img {
-  width: 50%;
-}
-.color-span {
-  color: #0b0223;
-}
 
 /* footer section styles */
-footer {
+.footer-container {
   background: #0b0223;
   padding: 50px 100px;
 }
@@ -351,27 +413,13 @@ footer {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-bottom: 20px;
-}
-.item-break {
-  display: flex;
-  gap: 20px;
+  margin-bottom: 30px;
 }
 .footer-items-1 li {
   list-style-type: none;
   color: #fff;
   font-size: 18px;
   font-weight: 600;
-}
-.social-icons {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  margin-bottom: 20px;
-}
-.social-icons img {
-  width: 30px;
-  padding: 0 10px;
   cursor: pointer;
 }
 .footer-items-2 li {
@@ -379,21 +427,47 @@ footer {
   list-style-type: none;
   font-size: 16px;
   font-weight: 500;
+  cursor: pointer;
+}
+.footer-items-1 li:hover,
+.footer-items-2 li:hover {
+  color: #ff42a5;
+  transition: 1s;
+}
+.social-icons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.social-icons img {
+  width: 30px;
+  padding: 0 10px;
+  cursor: pointer;
+  border-radius: 50%;
 }
 .copyright {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
   text-align: center;
-}
-.copyright small {
   color: rgba(255, 255, 255, 0.6);
-  text-align: center;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 500;
 }
 
 /* small or mobile device styles */
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 512px) {
+  /* common and shared section styles */
+  .title {
+    font-size: 30px;
+  }
+  .description {
+    font-size: 14px;
+  }
+
+  /* navbar section styles*/
   .navbar {
-    padding: 30px 50px;
+    padding: 30px;
   }
   .nav-container {
     flex-direction: column;
@@ -402,222 +476,274 @@ footer {
     margin-top: 30px;
     flex-direction: column;
   }
-  .menus li {
-    font-size: 14px;
-  }
 
+  /* banner section styles */
   .banner {
-    padding: 30px 50px;
+    padding: 30px;
   }
   .banner-container {
     flex-direction: column-reverse;
-    gap: 50px;
+  }
+  .banner-right-img,
+  .banner-left-img {
+    width: 100%;
+  }
+  .banner-content {
+    width: 200px;
+  }
+  .banner-sub-title {
+    font-size: 20px;
+  }
+  .banner-title {
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+  .banner-text {
+    font-size: 10px;
+  }
+  .btn-primary {
+    font-size: 10px;
+    padding: 10px 20px;
+  }
+
+  /* gamer section styles */
+  .gamer {
+    padding: 30px;
+  }
+  .gamer-container {
+    flex-direction: column;
+  }
+  .gamer-content,
+  .gamer-img {
+    text-align: center;
+    width: 100%;
+  }
+  .purpose {
+    margin-top: 14px;
+    font-size: 18px;
+  }
+  .unlesh {
+    font-size: 16px;
+  }
+
+  /* online game section styles */
+  .online-game {
+    padding: 30px;
+  }
+  .card {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  /* game section styles */
+  .game {
+    padding: 30px;
+  }
+  .game-container {
+    flex-direction: column;
+    gap: 40px;
+  }
+  .game-content,
+  .game-img {
+    width: 100%;
+  }
+  .game-text {
+    text-align: center;
+  }
+  .game-text p {
+    margin: 0;
+  }
+
+  /* career section styles */
+  .career {
+    padding: 30px;
+  }
+  .career-container {
+    flex-direction: column;
+  }
+  .career-content {
+    width: 100%;
+  }
+  .career-img {
+    margin-top: 30px;
+    width: 100%;
+  }
+  .career-title {
+    font-size: 30px;
+  }
+  .career-description {
+    font-size: 12px;
+  }
+  .career-list {
+    font-size: 8px;
+  }
+
+  /* category section styles */
+  .category {
+    padding: 30px;
+  }
+  .category-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
+  .category-items {
+    gap: 5px;
+    padding: 5px;
+    font-size: 8px;
+  }
+  .category-items img {
+    width: 15px;
+    height: 15px;
+  }
+
+  /* footer section styles */
+  .footer-container {
+    padding: 30px;
+  }
+  .footer-items-1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .footer-items-1 li,
+  .footer-items-2 li {
+    font-size: 12px;
+    text-align: center;
+  }
+  .footer-items-2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 10px;
+  }
+  .social-icons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-left: 30px;
+  }
+}
+
+/* medium or tablet device styles */
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  /* navbar section styles*/
+  .menus ul {
+    flex-direction: column;
+  }
+
+  /* banner section styles */
+  .banner {
+    padding: 30px 100px;
+  }
+  .banner-container {
+    flex-direction: column;
+  }
+  .banner-right-img,
+  .banner-left-img {
+    width: 100%;
+  }
+  .banner-left-img img,
+  .banner-right-img img {
+    height: 100vh;
+  }
+
+  /* gamer section styles */
+  .gamer {
+    padding: 30px;
+  }
+  .gamer-container {
+    flex-direction: column-reverse;
+  }
+  .gamer-content,
+  .gamer-img {
+    text-align: center;
+    width: 100%;
+  }
+
+  /* online game section styles */
+  .online-game {
+    padding: 30px;
+  }
+  .card {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  /* game section styles */
+  .game {
+    padding: 30px;
+  }
+  .game-container {
+    flex-direction: column;
+    gap: 40px;
+  }
+  .game-content,
+  .game-img {
+    width: 100%;
+  }
+  .game-text {
+    text-align: center;
+  }
+
+  /* career section styles */
+  .career {
+    padding: 30px;
+  }
+  .career-container {
+    flex-direction: column;
+  }
+  .career-content {
+    width: 100%;
+  }
+  .career-img {
+    margin-top: 30px;
+    width: 100%;
+  }
+
+  /* category section styles */
+  .category {
+    padding: 30px;
+  }
+
+  /* footer section styles */
+  .footer-container {
+    padding: 30px;
+  }
+}
+
+/* large or laptop device styles */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  /* banner section styles */
+  .banner-content {
+    width: 300px;
+    margin-left: 25px;
   }
   .banner-sub-title {
     font-size: 40px;
   }
   .banner-title {
     font-size: 80px;
+    margin-bottom: 10px;
   }
   .banner-text {
     font-size: 16px;
   }
   .btn-primary {
-    font-size: 15px;
-    padding: 10px 30px;
-  }
-  .banner-img {
-    width: 100%;
+    font-size: 16px;
+    padding: 10px 20px;
   }
 
-  .gamer {
-    padding: 50px;
-  }
-  .gamer-container {
-    flex-direction: column;
-  }
-  .gamer-content,
-  .gamer-img {
-    text-align: center;
-    width: 100%;
-  }
-  .title {
-    font-size: 40px;
-  }
-  .description {
+  /* online game section styles */
+  .hover-text {
+    margin-top: 10px;
     font-size: 16px;
   }
-  .purpose {
-    margin-top: 20px;
+
+  /* career section styles */
+  .career-title {
+    font-size: 40px;
+  }
+  .career-description {
     font-size: 18px;
   }
-  .unlesh {
-    font-size: 20px;
-  }
-
-  .online-game {
-    padding: 50px;
-  }
-  .card {
-    grid-template-columns: 1fr;
-  }
-  .child {
-    width: 325px;
-    height: 380px;
-  }
-  .child i {
-    top: 150px;
-    left: 150px;
-  }
-  .child p {
-    top: 180px;
-    left: 35%;
-  }
-
-  .game {
-    padding: 50px;
-  }
-  .game-container {
-    flex-direction: column;
-  }
-  .game-content {
-    width: 100%;
-  }
-  .game-text {
-    width: 100%;
-    margin: 0 0;
-    text-align: center;
-  }
-  .game-text p {
-    margin-top: 40px;
-  }
-  .game-img {
-    margin-top: 40px;
-    width: 60%;
-  }
-
-  .category {
-    padding: 50px;
-  }
-  .category-container {
-    grid-template-columns: repeat(3, 1fr);
-  }
-  .category-items {
-    font-size: 10px;
-  }
-  .category-items img {
-    width: 20px;
-    height: 20px;
-  }
-
-  footer {
-    background: #0b0223;
-    padding: 50px;
-  }
-  .item-break {
-    flex-direction: column;
-    gap: 40px;
-  }
-  .social-icons {
-    margin: 50px 0;
-  }
-  .social-icons img {
-    padding: 0 50px;
-  }
-  .copyright {
-    margin-top: 50px;
-  }
-}
-
-/* medium or tablet device styles */
-@media screen and (min-width: 577px) and (max-width: 992px) {
-  .menus ul {
-    flex-direction: column;
-  }
-
-  .banner {
-    padding: 50px 100px;
-  }
-  .banner-container {
-    flex-direction: column;
-    gap: 50px;
-  }
-  .banner-img {
-    width: 100%;
-  }
-
-  .gamer {
-    padding: 50px;
-  }
-  .gamer-container {
-    flex-direction: column-reverse;
-  }
-  .gamer-content,
-  .gamer-img {
-    text-align: center;
-    width: 100%;
-  }
-
-  .online-game {
-    padding: 50px;
-  }
-  .card {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .child {
-    width: 320px;
-    height: 375px;
-  }
-  .child i {
-    top: 150px;
-    left: 150px;
-  }
-  .child p {
-    top: 180px;
-    left: 35%;
-  }
-
-  .game {
-    padding: 50px;
-  }
-  .game-container {
-    flex-direction: column;
-  }
-  .game-content {
-    width: 100%;
-  }
-  .game-text {
-    width: 100%;
-    margin: 0 0;
-    text-align: center;
-  }
-  .game-text p {
-    margin-top: 40px;
-  }
-  .game-img {
-    margin-top: 40px;
-    width: 80%;
-  }
-
-  .category-container {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  footer {
-    background: #0b0223;
-    padding: 50px;
-  }
-  .item-break {
-    flex-direction: column;
-    gap: 40px;
-  }
-  .social-icons {
-    margin: 50px 0;
-  }
-  .social-icons img {
-    padding: 0 50px;
-  }
-  .copyright {
-    margin-top: 50px;
+  .career-list {
+    font-size: 14px;
   }
 }
