--- a/styles/style.css
+++ b/styles/style.css
@@ -346,6 +346,18 @@ body {
 .country li {
   padding-bottom: 10px;
 }
+.career-button {
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #f948b2;
+  border: none;
+  outline: 0;
+  border-radius: 48px;
+  padding: 15px 40px;
+  background: #fff;
+  cursor: pointer;
+}
 
 /* category section styles */
 .category {
@@ -576,6 +588,10 @@ body {
   .career-list {
     font-size: 8px;
   }
+  .career-button {
+    font-size: 16px;
+    padding: 10px 20px;
+  }
 
   /* category section styles */
   .category {
@@ -740,6 +756,9 @@ body {
   }
 
   /* career section styles */
+  .career-content{
+    padding: 20px 0;
+  }
   .career-title {
     font-size: 40px;
   }
